--- a/CycleLength/.vscode/settings.json
+++ b/CycleLength/.vscode/settings.json
@@ -57,6 +57,8 @@
         "sstream": "cpp",
         "variant": "cpp",
         "bitset": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "condition_variable": "cpp",
+        "mutex": "cpp"
     }
 }
